# switch-newpipe

./: .gitignore  .gitmodules  AGENTS.MD  CMakeLists.txt  Makefile  README.md  README_kr.md  build.sh  switch_newpipe_session.json
.github/workflows/: release.yml
docs/: architecture.md  handoff.md  playback.md  roadmap.md  testing.md  toolchain.md
include/activity/: comment_feed_activity.hpp  main_activity.hpp  stream_detail_activity.hpp  stream_feed_activity.hpp
include/newpipe/: auth_store.hpp  catalog_service.hpp  fixture_service.hpp  http_client.hpp  i18n.hpp  image_loader.hpp  library_store.hpp  log.hpp  models.hpp  playback_helper.hpp  runtime.hpp  settings_store.hpp  switch_player.hpp  throttling_decrypter.hpp  youtube_catalog_service.hpp  youtube_resolver.hpp
include/tab/: home_tab.hpp  library_tab.hpp  search_tab.hpp  settings_tab.hpp  subscriptions_tab.hpp
include/view/: button_refresh.hpp  stream_card.hpp
resources/fixtures/: catalog.json
resources/i18n/en-US/: strings.json
resources/i18n/ko/: strings.json
resources/xml/activity/: comment_feed.xml  main.xml  stream_detail.xml  stream_feed.xml
resources/xml/tabs/: home.xml  library.xml  search.xml  settings.xml  subscriptions.xml
resources/xml/views/: stream_card.xml
src/: main.cpp
src/activity/: comment_feed_activity.cpp  main_activity.cpp  stream_detail_activity.cpp  stream_feed_activity.cpp
src/common/: auth_store.cpp  fixture_service.cpp  http_client.cpp  image_loader.cpp  library_store.cpp  log.cpp  runtime.cpp  settings_store.cpp  throttling_decrypter.cpp  youtube_catalog_service.cpp  youtube_resolver.cpp
src/host/: main.cpp
src/switch/: switch_player.cpp
src/tab/: home_tab.cpp  library_tab.cpp  search_tab.cpp  settings_tab.cpp  subscriptions_tab.cpp
src/view/: stream_card.cpp
